Add Scotland data to subpage env

--- a/markdown-management-report/management-report.Rmd
+++ b/markdown-management-report/management-report.Rmd
@@ -16,7 +16,7 @@ source(here::here("code", "00_setup-environment.R"))
 pds <- read_csv(here("data", glue("{fy}-{qt}_final-data.csv"))) %>%
   
   # Filter HB for fasther knitting when testing
-  filter(substr(health_board, 1, 1) %in% c("A", "B")) %>%
+  filter(substr(health_board, 1, 1) == "A") %>%
   
   # Remove codes from board and IJB
   mutate(health_board = str_sub(health_board, 3, -1),
@@ -131,6 +131,10 @@ for (hb in health_boards) {
   subpage_data <- pds %>% 
     filter(health_board == hb & fy == y)
   
+  # Filter data for Scotland data for each financial year
+  subpage_scot <- pds %>%
+    filter(fy == y)
+  
   # Calculate expected diagnoses figure
   expected <- exp %>%
     filter(health_board_label == hb & fy == y) %>%
@@ -138,6 +142,7 @@ for (hb in health_boards) {
   
   # Assign filtered data, health board and fy to subpage_env 
   assign("subpage_data", subpage_data, subpage_env)
+  assign("subpage_scot", subpage_scot, subpage_env)
   assign("hb", hb, subpage_env)
   assign("sel_fy", y, subpage_env)
   assign("max_fy", max(years), subpage_env) # To determine whether page is hidden
