--- a/markdown-management-report/management-report.Rmd
+++ b/markdown-management-report/management-report.Rmd
@@ -63,15 +63,16 @@ div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 
 </div>
 
+
 <!-- Scotland -->
 
-```{r render scotland page, include=FALSE}
+```{r scotland, include=FALSE}
 
 # Get all unique financial years for the subpages
 years         <- sort(unique(pds$fy))
 
 # Create variable which stores all subpages outputs
-out = NULL
+out <- NULL
 
 # Set knitr options to allow duplicate labels (needed for the subpages)
 options(knitr.duplicate.label = 'allow')
@@ -99,7 +100,7 @@ for(y in years){
   assign("exp", expected, subpage_env) # Expected number of diagnoses
   
   # Knit subpage.RMD using the subpage_env and add result to out vector
-  out = c(out, knitr::knit_child('subpage.Rmd', envir = subpage_env))
+  out <- c(out, knitr::knit_child('subpage.Rmd', envir = subpage_env))
     
 }
 ```
@@ -109,14 +110,14 @@ for(y in years){
 
 <!-- HEALTH BOARDS -->
 
-```{r render hb pages, include=FALSE}
+```{r health-boards, include=FALSE}
 
 # Get all unique health boards and financial years for the subpages
 health_boards <- sort(unique(pds$health_board))
 years         <- sort(unique(pds$fy))
 
 # Create variable which stores all subpages outputs
-out = NULL
+out < NULL
 
 # Set knitr options to allow duplicate labels (needed for the subpages)
 options(knitr.duplicate.label = 'allow')
@@ -150,7 +151,7 @@ for (hb in health_boards) {
   assign("exp", expected, subpage_env) # Expected number of diagnoses
   
   # Knit subpage.RMD using the subpage_env and add result to out vector
-  out = c(out, knitr::knit_child('subpage.Rmd', envir = subpage_env))
+  out < c(out, knitr::knit_child('subpage.Rmd', envir = subpage_env))
     
   }
 }
