--- a/markdown-management-report/subpage.Rmd
+++ b/markdown-management-report/subpage.Rmd
@@ -85,12 +85,13 @@ ref <- subpage_data %>%
   mutate(year = if_else(month %in% 1:3, 
                         paste0(substr(sel_fy, 1, 2), substr(sel_fy, 6, 7)),
                         substr(sel_fy, 1, 4)),
-         month_abbr = month(month, label = TRUE),
-         month_full = month(month, label = TRUE, abbr = FALSE)) %>%
-  mutate(month = forcats::fct_relevel(month_abbr, "Jan", "Feb", "Mar", after = Inf))
+         month_abbr = forcats::fct_relevel(
+                         month(month, label = TRUE),
+                         "Jan", "Feb", "Mar", after = Inf),
+         month_full = month(month, label = TRUE, abbr = FALSE))
 
 p <- 
-  ggplot(ref, aes(x = month, y = referrals, group = 1,
+  ggplot(ref, aes(x = month_abbr, y = referrals, group = 1,
                   text = paste0(month_full, " ", year, "<br>",
                                 "Referrals: ", referrals))) + 
   geom_point() +
@@ -101,7 +102,14 @@ p <-
 ```
 
 ```{r Chart1}
-ggplotly(p,
-         tooltip = "text")
+ggplotly(p, tooltip = "text") %>%
+  config(displayModeBar = TRUE,
+         modeBarButtonsToRemove = list('select2d', 'lasso2d', 'zoomIn2d', 
+                                             'zoomOut2d', 'autoScale2d', 
+                                             'toggleSpikelines', 
+                                             'hoverCompareCartesian', 
+                                             'hoverClosestCartesian'), 
+               displaylogo = F, collaborate = F, editable = F)
+
 ```
 
