Use walk instead of map

--- a/markdown-management-report/management-report.Rmd
+++ b/markdown-management-report/management-report.Rmd
@@ -13,7 +13,7 @@ output:
 source(here::here("code", "00_setup-environment.R"))
 
 # Load functions
-purrr::map(dir(here::here("functions"), full.names = TRUE), source)
+purrr::walk(dir(here::here("functions"), full.names = TRUE), source)
 
 # Set knitr options to allow duplicate labels (needed for the subpages)
 options(knitr.duplicate.label = 'allow')
