--- a/markdown-management-report/management-report.Rmd
+++ b/markdown-management-report/management-report.Rmd
@@ -74,41 +74,15 @@ div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 
 ```{r scotland, include=FALSE}
 
-# Get all unique financial years for the subpages
-years         <- sort(unique(pds$fy))
+scotland <- map(.x = sort(unique(pds$fy)), 
+                .f = ~set_env(data = pds,
+                              exp = exp,
+                              hb = "Scotland",
+                              year = .x))
 
-# Create variable which stores all subpages outputs
-out <- NULL
-
-# Create temporary environment which we use for knitting subpages.RMD 
-subpage_env <- new.env()
-
-for(y in years){
-    
-  # Filter data for health board and financial year
-  subpage_data <- pds %>% 
-    filter(fy == y)
-  
-  # Calculate expected diagnoses figure
-  expected <- exp %>%
-    filter(health_board_label == "Scotland" & fy == y) %>%
-    {.$diagnoses}
-  
-  # Assign filtered data, health board and fy to subpage_env 
-  assign("subpage_data", subpage_data, subpage_env)
-  assign("hb", "Scotland", subpage_env)
-  assign("sel_fy", y, subpage_env)
-  assign("max_fy", max(years), subpage_env) # To determine whether page is hidden
-  assign("all_fy", setdiff(years, y), subpage_env) # To add links to all FY pages
-  assign("exp", expected, subpage_env) # Expected number of diagnoses
-  
-  # Knit subpage.RMD using the subpage_env and add result to out vector
-  out <- c(out, knitr::knit_child('subpage-scotland.Rmd', envir = subpage_env))
-    
-}
 ```
 
-`r paste(knitr::knit_child(text = out), collapse = '')`
+`r paste(knitr::knit_child(text = scotland), collapse = '')`
 
 
 <!-- HEALTH BOARDS -->
