--- a/markdown-management-report/subpage-hb.Rmd
+++ b/markdown-management-report/subpage-hb.Rmd
@@ -46,9 +46,9 @@ MANAGEMENT INFORMATION ONLY: NOT FOR ONWARD DISTRIBUTION
 Row
 ----------------------------------------------------------------------
 
-### Summary Table
+### Number of Referrals
 
-```{r}
+```{r Referrals Value Box}
 valueBox(ref, 
          icon = "fa-hashtag",
          caption = glue("referrals were made for post-diagnostic support."))
@@ -56,7 +56,7 @@ valueBox(ref,
 
 ### LDP 1: Expected vs Referral
 
-```{r}
+```{r Expected Value Box}
 valueBox(paste0(round_half_up(exp_rate, 1), "%"), 
          icon = "fa-percent",
          caption = glue("of the expected number of diagnoses were ",
@@ -65,7 +65,7 @@ valueBox(paste0(round_half_up(exp_rate, 1), "%"),
 
 ### LDP 2: 12 Months Support
 
-```{r}
+```{r 12 Months Value Box}
 valueBox(paste0(round_half_up(pds_rate, 1), "%"), 
          icon = "fa-percent",
          caption = glue("of those referred for post diagnostic support ",
@@ -78,31 +78,11 @@ Row {data-height=500}
 
 ### Number of Referrals {data-width=800}
 
-```{r referrals, include=FALSE}
-ref <- subpage_data %>%
-  group_by(month) %>%
-  summarise(referrals = sum(referrals))  %>%
-  mutate(year = if_else(month %in% 1:3, 
-                        paste0(substr(sel_fy, 1, 2), substr(sel_fy, 6, 7)),
-                        substr(sel_fy, 1, 4)),
-         month_abbr = forcats::fct_relevel(
-                         month(month, label = TRUE),
-                         "Jan", "Feb", "Mar", after = Inf),
-         month_full = month(month, label = TRUE, abbr = FALSE))
+```{r Referrals Plot}
 
-p <- 
-  ggplot(ref, aes(x = month_abbr, y = referrals, group = 1,
-                  text = paste0(month_full, " ", year, "<br>",
-                                "Referrals: ", referrals))) + 
-  geom_point() +
-  geom_line() +
-  scale_y_continuous(limits = c(0, NA)) +
-  labs(x = "",
-       y = "Number of Referrals")
-```
-
-```{r Chart1}
-ggplotly(p, tooltip = "text") %>%
+ggplotly(plot_referrals(subpage_data, ijb_group = TRUE), 
+         tooltip = "text") %>%
+  
   config(displayModeBar = TRUE,
          modeBarButtonsToRemove = list('select2d', 'lasso2d', 'zoomIn2d', 
                                              'zoomOut2d', 'autoScale2d', 
