--- a/markdown-management-report/subpage-hb.Rmd
+++ b/markdown-management-report/subpage-hb.Rmd
@@ -40,12 +40,23 @@ Please get in touch with any comments, suggestions and feedback: [NSS.ISDDementi
 Row {data-height=30}
 -----------------------------------------------------------------------
 
-<!-- Management Information tagline -->
+### <!-- Management Information Tagline -->
+
 <font size="3"> 
-<center> 
+<center> <bold>
 <span style="color:red"> 
 MANAGEMENT INFORMATION ONLY: NOT FOR ONWARD DISTRIBUTION 
-</span> </center> </font> 
+</span> </center> </font> </bold>
+
+
+Row
+----------------------------------------------------------------------
+
+### <!-- Information -->
+
+More information here.
+
+Where the most recent financial year is selected, only quarters with submitted data is displayed.
 
 
 Row
