Change date format in title

--- a/markdown-management-report/management-report.Rmd
+++ b/markdown-management-report/management-report.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Dementia PDS Quarterly Management Report: Data as at 30 June 2019"
+title: "Dementia PDS Quarterly Management Report: 2016/17 - 2019/20 Q1"
 output: 
   flexdashboard::flex_dashboard:
     logo: isdscotland.png
