--- a/markdown-management-report/management-report.Rmd
+++ b/markdown-management-report/management-report.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Dementia PDS Quarterly Management Report: 2016/17 - 2019/20 Q1"
+title: "Dementia PDS Quarterly Management Report: Data as at 30 June 2019"
 output: 
   flexdashboard::flex_dashboard:
     logo: isdscotland.png
@@ -27,6 +27,9 @@ pds <- read_rds(here("data", glue("{fy}-{qt}_final-data.rds"))) %>%
 
 # Load expected diagnoses reference file
 exp <- read_csv(here("reference-files", "expected-diagnoses.csv"))
+
+# Load error summary
+error <- read_rds(here("data", glue("{fy}-{qt}_error-summary.rds")))
 
 ```
 
