Add error table to methodology section

--- a/markdown-management-report/management-report.Rmd
+++ b/markdown-management-report/management-report.Rmd
@@ -119,7 +119,7 @@ This page includes more detail regarding the methodology used to arrive at the f
 This report was produced using R and R Markdown. The code is available publically on [GitHub](https://github.com/alicebyers5/dementia-pds).
 
 
-Row {.tabset}
+Row {.tabset data-height=800}
 -------------------------------------------------
 
 ### **Number of Expected Diagnoses**
@@ -135,12 +135,56 @@ It is expected that this report will be refreshed and methodology reviewed in th
 
 ### **Local Delivery Plan (LDP) Standard Classification**
 
-XXX
+A record is classed as _complete_ if it meets the following criteria:
+
+* Started PDS within 12 months of diagnosis and support is still ongoing after 12 months
+
+* Started PDS within 12 months of diagnosis and PDS has ended after at least 11 months
+
+
+A record is classed as a _fail_ if it meets the following criteria:
+
+* PDS started more than 12 months after diagnosis
+
+* PDS not started and more than 12 months has passed since diagnosis
+
+* PDS terminated less than 11 months after first contact date
+
+* PDS terminated before first contact has been made
+
+
+A record is classed as _exempt_ if the termination reason is one of the following:
+
+* Service user has died
+
+* Service user has moved to a different Health Board
+
+* Service user has terminated PDS early/refused
+
+* Service user no longer able to engage in PDS
+
+
+A record is classed as _ongoing_ if it meets the following criteria:
+
+* Less than 12 months has passed since diagnosis and PDS has not yet started
+
+* PDS has started within 12 months of diagnosis, is still being received and 12 months has not yet passed
 
 
 ### **Data Quality**
 
-What changes are made to the outstanding errors on the file? e.g. missing PDS Status recoded to active.
+Any errors or queries outstanding following the resubmission deadline will be included in analytical outputs such as these management reports and annual publication. Therefore, the better quality of data submitted, the more accurate these figures will be.
 
+The only adjustments made to the data before analysis by ISD are to remove any records with a diagnosis date outwith the reporting period; i.e. before `r format(start_date, "%d %B %Y")` or after `r format(end_date, "%d %B %Y")` and also remove any records with no diagnosis date provided.
+
+```{r error summary}
+err %>% 
+  group_by(fy, health_board) %>% 
+  summarise(err_rate = round_half_up(sum(total_errors) / sum(records) * 100, 1)) %>%
+  mutate(err_rate = paste0(err_rate, "%")) %>%
+  spread(fy, err_rate) %>%
+  rename(`Health Board` = health_board) %>%
+  knitr::kable()
+```
 
 <!-- END OF SCRIPT -->
